@@ -2,6 +2,7 @@ xboxdrv 0.4 - (25/Dec/2008)
 ===========================
 
 * added --square-axis option
+* added --autofire option
 
 
 xboxdrv 0.3 - (06/Nov/2008)
